# dune-istl

./: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  config.h.cmake  dune-istl.pc.in
cmake/modules/: AddARPACKPPFlags.cmake  AddSuperLUFlags.cmake  DuneIstlMacros.cmake  DuneSolverFactory.cmake  FindARPACK.cmake  FindARPACKPP.cmake  FindSuperLU.cmake  SolverFactory.cmake
doc/doxygen/: CMakeLists.txt  mainpage.txt
dune/: CMakeLists.txt
dune/istl/: CMakeLists.txt  access.hh  basearray.hh  bccsmatrixinitializer.hh  bcrsmatrix.hh  bvector.hh  cholmod.hh  concepts.hh  defaultmatrixvectortraits.hh  dilu.hh  foreach.hh  gsetc.hh  ibcrsmatrix.hh  ildl.hh  ilu.hh  imatrix.hh  indexedarrayview.hh  indexrange.hh  istlexception.hh  ldl.hh  matrixmarket.hh  matrixredistribute.hh  matrixtraits.hh  matrixutils.hh  matrixview.hh  multitypeblockmatrix.hh  multitypeblockvector.hh  novlpschwarz.hh  operators.hh  overlappingschwarz.hh  partitioner.hh  preconditioners.hh  repartition.hh  schwarz.hh  sizeutilities.hh  solver.hh  solverfactory.hh  solverregistry.hh  solvers.hh  sparseindexranges.hh  (+8 more)
dune/istl/blockkrylov/: CMakeLists.txt
dune/istl/common/: CMakeLists.txt  registry.hh  utility.hh
dune/istl/eigenvalue/: arpackpp.hh
dune/istl/eigenvalue/test/: CMakeLists.txt  cond2test.cc  matrixinfo.hh
dune/istl/paamg/: aggregates.hh  amg.hh  fastamgsmoother.hh  galerkin.hh  graph.hh  kamg.hh  smoother.hh  transfer.hh
dune/istl/test/: CMakeLists.txt  bcrsimplicitbuild.cc  bvectortest.cc  cholmodtest.cc  complexrhstest.cc  foreachtest.cc  ibcrsmatrixtest.cc  imatrixtest.cc  indexedarrayviewtest.cc  inverseoperator2prectest.cc  iotest.cc  laplacian.hh  ldltest.cc  matrixmarkettest.cc  matrixtest.cc  matrixtest.hh  (+21 more)
src/: istl-solver-playground.cc  istl-solver-playground.hh
(+12 files in other folders)
